# saraswati

./: .dockerignore  .firebaserc  .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  README.md  deploy_aws.py  descript.text  docker-compose.yml  firebase.json  netlify.toml  render.yaml  requirements.txt  start.bat  start.sh  vcpkg.json
.github/workflows/: deploy.yml
config/: config.example.json
db/: schema.cypher
deploy/: .env.example  Caddyfile  config.prod.json  docker-compose.prod.yml  setup-server.sh
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: GraphView.tsx  PaperList.tsx  StatsPanel.tsx
frontend/src/hooks/: usePolling.ts
frontend/src/styles/: global.css
include/api/: ApiHandler.hpp
include/clients/: ApiClients.hpp
include/controllers/: Controllers.hpp
include/crawlers/: DiscourseCrawlers.hpp
include/db/: MemgraphClient.hpp
include/net/: AsyncHttpClient.hpp
include/parser/: HtmlParser.hpp
include/parsers/: SourceParsers.hpp
include/pipeline/: DataPipeline.hpp
include/util/: BloomFilter.hpp
research/: __init__.py  pyproject.toml  server.py  server_lambda.py
research/agents/: deep_dive.py  orchestrator.py  specialized.py
research/core/: chunker.py  config.py  db.py  llm.py
research/parsing/: pdf_parser.py
research/sources/: __init__.py  papers.py
src/: main.cpp
src/api/: ApiHandler.cpp
src/clients/: ApiClients.cpp
src/controllers/: Controllers.cpp
src/crawlers/: DiscourseCrawlers.cpp
src/db/: MemgraphClient.cpp
src/net/: AsyncHttpClient.cpp
src/parser/: HtmlParser.cpp
src/parsers/: SourceParsers.cpp
src/pipeline/: DataPipeline.cpp
src/util/: BloomFilter.cpp
ui/: Dockerfile  index.html  netlify.toml  package-lock.json  package.json  vite.config.ts
ui/netlify/functions/: research.mts
ui/src/: App.tsx  config.ts
ui/src/components/: AgentChat.tsx  DeepDive.tsx  DiscourseFeed.tsx  ErrorBoundary.tsx  GraphView.tsx  HudLayout.tsx  LandingPage.tsx  PaperDetailModal.tsx  PaperList.tsx  ProfilePage.tsx  ResearchPanel.tsx  ResearchTab.tsx  StatDetailModal.tsx  StatsPanel.tsx
ui/src/components/auth/: AuthContext.tsx  AuthModal.tsx
ui/src/components/viz/: KaTeXRenderer.tsx  MermaidRenderer.tsx
ui/src/hooks/: usePolling.ts
ui/src/lib/: firebase.ts  research.ts
ui/src/styles/: deepdive.css  global.css
