[project]
name = "saraswati-research"
version = "0.2.0"
description = "Research Paper Discovery & Explanation Engine for Saraswati"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "litellm>=1.50.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
    "pytest-asyncio>=0.24.0",
]
